--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -86,10 +86,11 @@ Hence, science is a method to find out how to world works.\footnote{Epistemology
 
 But science is also a human endeavor. If one says "science", it may be that the reference relates to the history of science, the state of scientific knowledge, or the science as a social institution. Regarding those latter aspects of science, things become less formally defined - if we look at the history of science, we see a complex of individuals that are somewhat unified by a common cause, but at the same time subject to their national and cultural influences as well as by personal vanity, pride or madness. As a result, the history of science, as well as its present state, is complicated by personal preferences, power games and random events, in the same way as political and economic history is.
 
-In the center of science, however, is a set of simple assumptions and ideals, often referred to as the "scientific method". Understanding how this method works will be the focus of the remaining part of this chapter.
+In the center of science, though, is a set of assumptions and methods, a philosophy that allows us to draw and agree on conclusions from empirical observations. The rest of this chapter is devoted to understanding these assumptions somewhat better, and finding how how the "scientific method" works. 
 
 
 \section{Philosophical foundations of scientific thinking}
+
 
 
 \subsection{Rationalism}
@@ -106,6 +107,15 @@ These words of one of the founding fathers of what we today consider Science are
 \begin{quote}
 And in this it is not likely that all are mistaken the conviction is rather to be held as testifying that the power of judging aright and of distinguishing truth from error, which is properly what is called good sense or reason, is by nature equal in all men; and that the diversity of our opinions, consequently, does not arise from some being endowed with a larger share of reason than others, but solely from this, that we conduct our thoughts along different ways, and do not fix our attention on the same objects. 
 \end{quote}
+
+
+\begin{figure}[]
+\begin{center}
+\includegraphics[width=5cm]{figures/Descartes}
+\caption{Portrait of René Descartes}
+\label{fig: Descartes}
+\end{center}
+\end{figure}
 
 
 
@@ -134,7 +144,7 @@ And in this it is not likely that all are mistaken the conviction is rather to b
 
 \chapter{The scientific literature}
 
-Science today is highly specialized. Most basic questions have long been solved. The scientific community is building a "house of knowledge", where one story is built on the next, is often expressed by a famous quote by Isaac Newton 
+Science today is highly specialized. Most basic questions have long been solved. You may think of the scientific enterprise as a "house of knowledge", where one story is built on the next. This is often expressed by a famous quote by Isaac Newton 
 
 \begin{quote}
 If I have seen further it is by standing on the shoulders of Giants.
@@ -145,10 +155,6 @@ Regardless of whether the quote was meant as it is interpreted today \footnote{B
 
 
  
-
-
-
-
 
 Before you start a new research project on a particular topic, you should find out what has already been done to a) understand better what you are doing b) avoid doing something that has already been done. 
 
@@ -308,11 +314,6 @@ The first sentence provides the topic of the paragraph. The last sentence should
 \subsection{Clarity}
 
 Keep it simple. \footnote{Mark Twain is famous for his effective writing. A tip from him: "As to the Adjective: when in doubt, strike it out."}
-
-
-
-
-
 
 
 
